--- a/day51-MenuUIDesign/css/styles.css
+++ b/day51-MenuUIDesign/css/styles.css
@@ -164,11 +164,16 @@ a {
 .container .mobile .app--header .nav--header .nav--menu .item:first-child, .container .mobile .app--header .nav--header .nav--menu .item:nth-child(2), .container .mobile .app--header .nav--header .nav--menu .item:nth-child(3), .container .mobile .app--header .nav--header .nav--menu .item:nth-child(4), .container .mobile .app--header .nav--header .nav--menu .item:nth-child(5), .container .mobile .app--header .nav--header .nav--menu .item:last-child {
   height: 67px;
   border-radius: 0 0 1.2rem 0;
-  left: -15%;
+  left: -10%;
+}
+
+.container .mobile .app--header .nav--header .nav--menu .item:first-child.active, .container .mobile .app--header .nav--header .nav--menu .item:nth-child(2).active, .container .mobile .app--header .nav--header .nav--menu .item:nth-child(3).active, .container .mobile .app--header .nav--header .nav--menu .item:nth-child(4).active, .container .mobile .app--header .nav--header .nav--menu .item:nth-child(5).active, .container .mobile .app--header .nav--header .nav--menu .item:last-child.active {
+  left: 0;
 }
 
 .container .mobile .app--header .nav--header .nav--menu .item:first-child {
-  width: 54vw;
+  width: 375px;
+  left: -23.89%;
   background: #1ec89d;
   -webkit-transition: left 750ms cubic-bezier(0.075, 0.82, 0.165, 1);
   transition: left 750ms cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -176,6 +181,7 @@ a {
 
 .container .mobile .app--header .nav--header .nav--menu .item:nth-child(2) {
   width: 335px;
+  left: -20.9%;
   background: #22b999;
   -webkit-transition: left 650ms cubic-bezier(0.075, 0.82, 0.165, 1);
   transition: left 650ms cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -183,6 +189,7 @@ a {
 
 .container .mobile .app--header .nav--header .nav--menu .item:nth-child(3) {
   width: 298.625px;
+  left: -18.25%;
   background: #23a98e;
   -webkit-transition: left 550ms cubic-bezier(0.075, 0.82, 0.165, 1);
   transition: left 550ms cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -190,6 +197,7 @@ a {
 
 .container .mobile .app--header .nav--header .nav--menu .item:nth-child(4) {
   width: 261.125px;
+  left: -15.54%;
   background: #269784;
   -webkit-transition: left 450ms cubic-bezier(0.075, 0.82, 0.165, 1);
   transition: left 450ms cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -197,6 +205,7 @@ a {
 
 .container .mobile .app--header .nav--header .nav--menu .item:nth-child(5) {
   width: 223.625px;
+  left: -12.8%;
   background: #25887d;
   -webkit-transition: left 350ms cubic-bezier(0.075, 0.82, 0.165, 1);
   transition: left 350ms cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -209,7 +218,7 @@ a {
   transition: left 250ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
-.container .mobile .app--header .nav--header .nav--menu a {
+.container .mobile .app--header .nav--header .nav--menu .link {
   width: 100%;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -222,13 +231,21 @@ a {
   text-transform: capitalize;
 }
 
+.container .mobile .app--header .nav--header .nav--menu .link span {
+  opacity: 1;
+}
+
+.container .mobile .app--header .nav--header .nav--menu .link span.remove {
+  opacity: 0;
+}
+
 .container .mobile .app--header .heading {
   display: block;
   position: absolute;
-  top: 50%;
-  left: 25%;
-  -webkit-transform: translate(-25%, -50%);
-          transform: translate(-25%, -50%);
+  top: 45%;
+  left: 10%;
+  -webkit-transform: translate(-15%, -50%);
+          transform: translate(-15%, -50%);
   font-size: 4rem;
   color: #1ec89d;
   text-transform: uppercase;
@@ -249,34 +266,140 @@ a {
 
 .container .mobile .app--header .toggle--container {
   position: absolute;
-  left: 47%;
-  bottom: 10rem;
-  width: 8.1rem;
-  height: 8.1rem;
+  left: 18%;
+  bottom: 15%;
+  width: 5.7rem;
+  height: 5.7rem;
   border-radius: 50%;
   background: linear-gradient(45deg, #1ec89d 45.76%, #22b999 98.48%);
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+}
+
+.container .mobile .app--header .toggle--container::before, .container .mobile .app--header .toggle--container::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 50%;
+}
+
+.container .mobile .app--header .toggle--container::before {
+  -webkit-transition: background-color 100ms linear;
+  transition: background-color 100ms linear;
+  z-index: -1;
+}
+
+.container .mobile .app--header .toggle--container::after {
+  background: #22b999;
+  -webkit-animation: pulse 1350ms infinite;
+          animation: pulse 1350ms infinite;
+  z-index: 1;
+}
+
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-transform: scale(0.95);
+            transform: scale(0.95);
+    opacity: .85;
+  }
+  100% {
+    -webkit-transform: scale(1.32);
+            transform: scale(1.32);
+    opacity: 0;
+  }
+}
+
+@keyframes pulse {
+  0% {
+    -webkit-transform: scale(0.95);
+            transform: scale(0.95);
+    opacity: .85;
+  }
+  100% {
+    -webkit-transform: scale(1.32);
+            transform: scale(1.32);
+    opacity: 0;
+  }
+}
+
+.container .mobile .app--header .toggle--container:hover::before {
+  background: #269784;
+}
+
+.container .mobile .app--header .toggle--container .toggle {
+  width: 2.975rem;
+  height: 1.75rem;
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  padding-left: .4rem;
-  -webkit-box-shadow: 0 0.2vmin 0.1vmin 0.3vmin rgba(236, 240, 241, 0.2), -0.2vmin 0.2vmin 0.1vmin 0.3vmin rgba(236, 240, 241, 0.3) inset;
-          box-shadow: 0 0.2vmin 0.1vmin 0.3vmin rgba(236, 240, 241, 0.2), -0.2vmin 0.2vmin 0.1vmin 0.3vmin rgba(236, 240, 241, 0.3) inset;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-transition: -webkit-transform 350ms cubic-bezier(0.75, 0.35, 0.35, 0.75);
+  transition: -webkit-transform 350ms cubic-bezier(0.75, 0.35, 0.35, 0.75);
+  transition: transform 350ms cubic-bezier(0.75, 0.35, 0.35, 0.75);
+  transition: transform 350ms cubic-bezier(0.75, 0.35, 0.35, 0.75), -webkit-transform 350ms cubic-bezier(0.75, 0.35, 0.35, 0.75);
+  z-index: 10;
+  cursor: pointer;
 }
 
-.container .mobile .app--header .toggle--container .title {
-  font-size: 1.5rem;
-  text-transform: uppercase;
-  color: #2c3e50;
-  font-weight: 600;
-  margin: 0 0 -0.54rem 0.54rem;
+.container .mobile .app--header .toggle--container .toggle .bar {
+  width: 100%;
+  height: .375rem;
+  background: #2c3e50;
+  border-radius: 1.2rem;
+}
+
+.container .mobile .app--header .toggle--container .toggle .bar.half {
+  width: 50%;
+}
+
+.container .mobile .app--header .toggle--container .toggle .bar.start {
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  -webkit-transform-origin: left;
+          transform-origin: left;
+  -webkit-transition: -webkit-transform 350ms cubic-bezier(0.65, 0.96, 0.96, 0.65);
+  transition: -webkit-transform 350ms cubic-bezier(0.65, 0.96, 0.96, 0.65);
+  transition: transform 350ms cubic-bezier(0.65, 0.96, 0.96, 0.65);
+  transition: transform 350ms cubic-bezier(0.65, 0.96, 0.96, 0.65), -webkit-transform 350ms cubic-bezier(0.65, 0.96, 0.96, 0.65);
+}
+
+.container .mobile .app--header .toggle--container .toggle .bar.end {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  -webkit-transform-origin: right;
+          transform-origin: right;
+  -webkit-transition: -webkit-transform 350ms cubic-bezier(0.65, 0.96, 0.96, 0.65);
+  transition: -webkit-transform 350ms cubic-bezier(0.65, 0.96, 0.96, 0.65);
+  transition: transform 350ms cubic-bezier(0.65, 0.96, 0.96, 0.65);
+  transition: transform 350ms cubic-bezier(0.65, 0.96, 0.96, 0.65), -webkit-transform 350ms cubic-bezier(0.65, 0.96, 0.96, 0.65);
+}
+
+.container .mobile .app--header .toggle--container .toggle.open {
+  -webkit-transform: rotate(405deg);
+          transform: rotate(405deg);
+}
+
+.open .bar.start {
+  -webkit-transform: translate(1.5rem, 0.7rem) rotate(270deg);
+          transform: translate(1.5rem, 0.7rem) rotate(270deg);
+}
+
+.open .bar.end {
+  -webkit-transform: translate(-1.495rem, -0.65rem) rotate(270deg);
+          transform: translate(-1.495rem, -0.65rem) rotate(270deg);
 }
 /*# sourceMappingURL=styles.css.map */
