--- a/day51-MenuUIDesign/css/styles.scss
+++ b/day51-MenuUIDesign/css/styles.scss
@@ -124,7 +124,7 @@ a {
                     display: inline-block;
                     font-size: 1.5rem;
                     text-transform: capitalize;
-                    color: $dark;
+                    color: $color-light;
                     &::first-letter {
                         font-size: 3.75rem
                     }
@@ -175,41 +175,42 @@ a {
 
                         &:first-child {
                             width: $px-width;
-                            left: -23.89%;
+                            left: -17.89%;
                             background: $color-green1;
                             transition: left 750ms cubic-bezier(0.075, 0.82, 0.165, 1);
                         }
 
                         &:nth-child(2) {
                             width: $px-width - 40px;
-                            left: -20.9%;
+                            left: -15.9%;
                             background: $color-green2;
                             transition: left 650ms cubic-bezier(0.075, 0.82, 0.165, 1);
                         }
 
                         &:nth-child(3) {
                             width: $px-width * .975 - $px-height;
-                            left: -18.25%;
+                            left: -14.25%;
                             background: $color-green3;
                             transition: left 550ms cubic-bezier(0.075, 0.82, 0.165, 1);
                         }
 
                         &:nth-child(4) {
                             width: $px-width * .875 - $px-height;
-                            left: -15.54%;
+                            left: -12.54%;
                             background: $color-green4;
                             transition: left 450ms cubic-bezier(0.075, 0.82, 0.165, 1);
                         }
 
                         &:nth-child(5) {
                             width: $px-width * .775 - $px-height;
-                            left: -12.8%;
+                            left: -10.8%;
                             background: $color-green5;
                             transition: left 350ms cubic-bezier(0.075, 0.82, 0.165, 1);
                         }
 
                         &:last-child {
                             width: $px-width * .675 - $px-height;
+                            left: -9%;
                             background: $color-green6;
                             transition: left 250ms cubic-bezier(0.075, 0.82, 0.165, 1);
                         }
@@ -223,7 +224,9 @@ a {
                         font-size: $padding * 2;
                         text-transform: capitalize;
                         & span {
+                            display: inline-block;
                             opacity: 1;
+                            transition: opacity 250ms cubic-bezier(0.84, 0.16, 0.32, 0.9);
                             &.remove {
                                 opacity: 0;
                             }
