--- a/day52-ImageBroken/css/styles.css
+++ b/day52-ImageBroken/css/styles.css
@@ -15,5 +15,150 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Abel", sans-serif;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  overflow: hidden;
+}
+
+.container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.container .image--container {
+  display: block;
+}
+
+.container .image--container .image {
+  width: 100%;
+  height: 5.25em;
+  min-width: 15rem;
+  position: relative;
+  background: transparent;
+  padding: 1.5em;
+  border-radius: 0.5em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.container .image--container .image::before, .container .image--container .image::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.container .image--container .image::before {
+  content: '\2639';
+  width: 100%;
+  height: 100%;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  padding-left: 0.57em;
+  font-size: 3em;
+  font-weight: 760;
+  color: #f00;
+  background: #ccc;
+  border-radius: 0.25em;
+  -webkit-box-shadow: 0 0.2vmin 0.3vmin 0.1vmin rgba(44, 62, 80, 0.5);
+          box-shadow: 0 0.2vmin 0.3vmin 0.1vmin rgba(44, 62, 80, 0.5);
+}
+
+.container .image--container .image::after {
+  content: attr(data-text);
+  width: 100%;
+  height: 100%;
+  margin-left: 4.5em;
+  color: #ecf0f1;
+  background: #f00;
+  border-radius: 0.5em;
+  font-family: "Abel", sans-serif;
+  font-size: 1.875em;
+  text-transform: capitalize;
+  top: 60%;
+  left: 5%;
+  -webkit-transform: translateY(50%) rotate(25deg);
+          transform: translateY(50%) rotate(25deg);
+  -webkit-transition: -webkit-transform 2s ease;
+  transition: -webkit-transform 2s ease;
+  transition: transform 2s ease;
+  transition: transform 2s ease, -webkit-transform 2s ease;
+  -webkit-animation: fall 1800ms cubic-bezier(0.75, 1.75, 0.187, 0.67);
+          animation: fall 1800ms cubic-bezier(0.75, 1.75, 0.187, 0.67);
+  -webkit-box-shadow: 0 0.2vmin 0.3vmin 0.1vmin rgba(44, 62, 80, 0.5);
+          box-shadow: 0 0.2vmin 0.3vmin 0.1vmin rgba(44, 62, 80, 0.5);
+  z-index: 10;
+}
+
+@-webkit-keyframes fall {
+  0% {
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+  }
+  25% {
+    -webkit-transform: translateY(25%);
+            transform: translateY(25%);
+  }
+  100% {
+    -webkit-transform: translateY(50%) rotate(25deg);
+            transform: translateY(50%) rotate(25deg);
+  }
+}
+
+@keyframes fall {
+  0% {
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+  }
+  25% {
+    -webkit-transform: translateY(25%);
+            transform: translateY(25%);
+  }
+  100% {
+    -webkit-transform: translateY(50%) rotate(25deg);
+            transform: translateY(50%) rotate(25deg);
+  }
+}
+
+.container .point {
+  width: 3.4125em;
+  height: 2.5em;
+  display: block;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translate(50%, 50%);
+          transform: translate(50%, 50%);
+  border-radius: 0.41667em;
+  background: #ccc;
+  -webkit-box-shadow: 0 0.2vmin 0.3vmin 0.1vmin rgba(44, 62, 80, 0.5);
+          box-shadow: 0 0.2vmin 0.3vmin 0.1vmin rgba(44, 62, 80, 0.5);
+  z-index: 10;
 }
 /*# sourceMappingURL=styles.css.map */
