--- a/day52-ImageBroken/css/styles.css
+++ b/day52-ImageBroken/css/styles.css
@@ -56,6 +56,37 @@ body {
           justify-content: center;
 }
 
+.container .image--container .image.open--image {
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  max-height: 60rem;
+  -webkit-animation: scale 2000ms cubic-bezier(0.075, 0.82, 0.165, 1);
+          animation: scale 2000ms cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+@-webkit-keyframes scale {
+  from {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  to {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes scale {
+  from {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  to {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
 .container .image--container .image::before, .container .image--container .image::after {
   content: '';
   position: absolute;
@@ -160,5 +191,9 @@ body {
   -webkit-box-shadow: 0 0.2vmin 0.3vmin 0.1vmin rgba(44, 62, 80, 0.5);
           box-shadow: 0 0.2vmin 0.3vmin 0.1vmin rgba(44, 62, 80, 0.5);
   z-index: 10;
+}
+
+.container .point.hide {
+  display: none;
 }
 /*# sourceMappingURL=styles.css.map */
