--- a/day52-ImageBroken/css/styles.scss
+++ b/day52-ImageBroken/css/styles.scss
@@ -47,7 +47,6 @@ body {
         .image {
             width: $size;
             height: $padding * 3.5;
-            // max-width: 10rem;
             min-width: 15rem;
             position: relative;
             background: transparent;
@@ -56,12 +55,23 @@ body {
             display: flex;
             align-items: center;
             justify-content: center;
-            // &.open {
-            // 	width: 100%;
-            // 	height: 100%;
-            // 	max-width: 30rem;
-            // 	max-height: 50rem;
-            // }
+
+            &.open--image {
+                width: $size;
+            	height: $size;
+            	max-width: $size;
+            	max-height: 60rem;
+                animation: scale 2000ms cubic-bezier(0.075, 0.82, 0.165, 1);
+
+                @keyframes scale {
+                    from {
+                        transform: scale(0);
+                    }
+                    to {
+                        transform: scale(1);
+                    }
+                }
+            }
 
             &::before,
             &::after {
@@ -88,6 +98,7 @@ body {
                 border-radius: $radius / 2;
                 box-shadow: $shadow;
             }
+
             &::after {
                 content: attr(data-text);
                 width: $size;
@@ -106,6 +117,7 @@ body {
                 animation: fall 1800ms cubic-bezier(0.75, 1.75, 0.187, 0.67);
                 box-shadow: $shadow;
                 z-index: 10;
+
                 @keyframes fall {
                     0% {
                         transform: translateY(-50%);
@@ -132,8 +144,9 @@ body {
         background: $color-grey;
         box-shadow: $shadow;
         z-index : 10;
-        // &.active {
-        // 	display: none
-        // }
+        
+        &.hide {
+        	display: none
+        }
     }
 }
