--- a/day52-ImageBroken/css/styles.css
+++ b/day52-ImageBroken/css/styles.css
@@ -59,7 +59,7 @@ body {
 .container .image--container .image.open--image {
   width: 100%;
   height: 100%;
-  max-width: 100%;
+  max-width: 80rem;
   max-height: 60rem;
   -webkit-animation: scale 2000ms cubic-bezier(0.075, 0.82, 0.165, 1);
           animation: scale 2000ms cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -195,5 +195,89 @@ body {
 
 .container .point.hide {
   display: none;
+}
+
+.container .banner--container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  max-width: 80rem;
+  max-height: 60rem;
+  background: rgba(236, 240, 241, 0.5);
+  z-index: 20;
+  -webkit-backdrop-filter: blur(0.1rem);
+          backdrop-filter: blur(0.1rem);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.container .banner--container .heading {
+  width: 100%;
+  margin: 0;
+  font-size: 7.5em;
+  text-align: center;
+  display: blocK;
+  text-transform: capitalize;
+  color: #2c3e50;
+  font-family: "Montserrat", sans-serif;
+}
+
+.container .banner--container .content {
+  padding: 3em;
+  margin: 1.5em;
+  display: block;
+}
+
+.container .banner--container .content .description {
+  padding: 1.5em;
+  color: #000000;
+  font-family: "Abel", sans-serif;
+  text-align: center;
+}
+
+.container .banner--container .content .description::first-letter {
+  text-transform: uppercase;
+}
+
+.container .banner--container .content .description:first-child {
+  font-size: 1.8em;
+  padding: 2.25em;
+  margin: 0;
+}
+
+.container .banner--container .content .description:last-child {
+  font-size: 2.25em;
+}
+
+.container .banner--container .close {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  padding: 0.5em 1.425em;
+  border: 0;
+  border-radius: 0.5em;
+  background: #f00;
+  color: #ecf0f1;
+  font-size: 1.8em;
+  font-weight: 900;
+  -webkit-box-shadow: 0 0.2vmin 0.3vmin 0.1vmin rgba(44, 62, 80, 0.5);
+          box-shadow: 0 0.2vmin 0.3vmin 0.1vmin rgba(44, 62, 80, 0.5);
+  cursor: pointer;
+}
+
+.container .banner--container .close:active {
+  -webkit-transform: scale(0.98);
+          transform: scale(0.98);
 }
 /*# sourceMappingURL=styles.css.map */
