--- a/day52-ImageBroken/css/styles.css
+++ b/day52-ImageBroken/css/styles.css
@@ -203,10 +203,8 @@ body {
   height: 100%;
   max-width: 80rem;
   max-height: 60rem;
-  background: rgba(236, 240, 241, 0.5);
+  background: #ecf0f1;
   z-index: 20;
-  -webkit-backdrop-filter: blur(0.1rem);
-          backdrop-filter: blur(0.1rem);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -222,15 +220,8 @@ body {
           justify-content: center;
 }
 
-.container .banner--container .heading {
-  width: 100%;
-  margin: 0;
-  font-size: 7.5em;
-  text-align: center;
-  display: blocK;
-  text-transform: capitalize;
-  color: #2c3e50;
-  font-family: "Montserrat", sans-serif;
+.container .banner--container.disabled {
+  display: none;
 }
 
 .container .banner--container .content {
@@ -240,24 +231,17 @@ body {
 }
 
 .container .banner--container .content .description {
-  padding: 1.5em;
-  color: #000000;
-  font-family: "Abel", sans-serif;
+  width: 100%;
+  margin: 0;
+  font-size: 4.5em;
   text-align: center;
+  display: blocK;
+  color: #2c3e50;
+  font-family: "Montserrat", sans-serif;
 }
 
 .container .banner--container .content .description::first-letter {
-  text-transform: uppercase;
-}
-
-.container .banner--container .content .description:first-child {
-  font-size: 1.8em;
-  padding: 2.25em;
-  margin: 0;
-}
-
-.container .banner--container .content .description:last-child {
-  font-size: 2.25em;
+  text-transform: capitalize;
 }
 
 .container .banner--container .close {
