--- a/day53-Calculator/css/styles.css
+++ b/day53-Calculator/css/styles.css
@@ -127,6 +127,118 @@ body {
   transition: -webkit-filter 250ms;
   transition: filter 250ms;
   transition: filter 250ms, -webkit-filter 250ms;
+  cursor: pointer;
+}
+
+.container .calculator .buttons--container .btn:active {
+  -webkit-transform: scale(0.95);
+          transform: scale(0.95);
+  -webkit-transition: -webkit-transform 250ms;
+  transition: -webkit-transform 250ms;
+  transition: transform 250ms;
+  transition: transform 250ms, -webkit-transform 250ms;
+}
+
+.container .calculator .buttons--container .btn:nth-child(11) {
+  -ms-grid-column: 4;
+  grid-column: 4;
+  -ms-grid-row: 4;
+  grid-row: 4;
+}
+
+.container .calculator .buttons--container .btn:nth-child(12) {
+  -ms-grid-column: 4;
+  grid-column: 4;
+  -ms-grid-row: 3;
+  grid-row: 3;
+}
+
+.container .calculator .buttons--container .btn:nth-child(13) {
+  -ms-grid-column: 4;
+  grid-column: 4;
+  -ms-grid-row: 1;
+  grid-row: 1;
+}
+
+.container .calculator .buttons--container .btn:nth-child(14) {
+  -ms-grid-column: 4;
+  grid-column: 4;
+  -ms-grid-row: 2;
+  grid-row: 2;
+}
+
+.container .calculator .buttons--container .btn:nth-child(15) {
+  grid-column: span 3;
+  -ms-grid-row: 5;
+  grid-row: 5;
+  background: rgba(43, 61, 79, 0.3);
+  color: rgba(43, 61, 79, 0.95);
+}
+
+.container .calculator .buttons--container .btn:nth-child(16) {
+  -ms-grid-column: 1;
+  grid-column: 1;
+  -ms-grid-row: 5;
+  grid-row: 5;
+}
+
+.container .calculator .buttons--container .btn:nth-child(17) {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-column: 2 / span 2;
+  -ms-grid-row: 4;
+  grid-row: 4;
+  text-transform: uppercase;
+}
+
+.container .calculator .buttons--container .btn:nth-child(16), .container .calculator .buttons--container .btn:nth-child(17) {
+  font-size: 2rem;
+  font-weight: 665;
+}
+
+.container .calculator .buttons--container .btn:hover {
+  -webkit-filter: brightness(110%);
+          filter: brightness(110%);
+}
+
+.container .calculator .buttons--container .btn:hover .front {
+  -webkit-transform: translateY(-0.6rem);
+          transform: translateY(-0.6rem);
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.3, 0.4, 0.7, 1.5);
+  transition: -webkit-transform 250ms cubic-bezier(0.3, 0.4, 0.7, 1.5);
+  transition: transform 250ms cubic-bezier(0.3, 0.4, 0.7, 1.5);
+  transition: transform 250ms cubic-bezier(0.3, 0.4, 0.7, 1.5), -webkit-transform 250ms cubic-bezier(0.3, 0.4, 0.7, 1.5);
+}
+
+.container .calculator .buttons--container .btn:hover .shadow {
+  -webkit-transform: translateY(0.4rem);
+          transform: translateY(0.4rem);
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.3, 0.4, 0.7, 1.5);
+  transition: -webkit-transform 250ms cubic-bezier(0.3, 0.4, 0.7, 1.5);
+  transition: transform 250ms cubic-bezier(0.3, 0.4, 0.7, 1.5);
+  transition: transform 250ms cubic-bezier(0.3, 0.4, 0.7, 1.5), -webkit-transform 250ms cubic-bezier(0.3, 0.4, 0.7, 1.5);
+}
+
+.container .calculator .buttons--container .btn:active .front {
+  -webkit-transform: translateY(-0.2rem);
+          transform: translateY(-0.2rem);
+  -webkit-transition: -webkit-transform 34ms;
+  transition: -webkit-transform 34ms;
+  transition: transform 34ms;
+  transition: transform 34ms, -webkit-transform 34ms;
+}
+
+.container .calculator .buttons--container .btn:active .shadow {
+  -webkit-transform: translateY(-0.1rem);
+          transform: translateY(-0.1rem);
+  -webkit-transition: -webkit-transform 34ms;
+  transition: -webkit-transform 34ms;
+  transition: transform 34ms;
+  transition: transform 34ms, -webkit-transform 34ms;
+}
+
+.container .calculator .buttons--container .btn:focus:not(:focus-visible) {
+  outline: none;
 }
 
 .container .calculator .buttons--container .btn .shadow,
@@ -158,7 +270,7 @@ body {
 .container .calculator .buttons--container .btn .front {
   display: block;
   position: relative;
-  padding: 1.5rem 3rem;
+  padding: 3rem 3rem;
   border-radius: 0.75rem;
   font-size: 1.5rem;
   color: #ecf0f1;
