--- a/day55-HexColorPicker/css/styles.css
+++ b/day55-HexColorPicker/css/styles.css
@@ -34,5 +34,46 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding: 1.5rem;
+}
+
+.container .output--container {
+  padding: 1.425rem 1.5rem;
+}
+
+.container .output--container .output {
+  display: inline-block;
+  font-size: 3.15789rem;
+  font-weight: 760;
+  color: #ecf0f1;
+}
+
+.container .btn {
+  padding: 1.5rem 2.375rem;
+  border: none;
+  border-radius: 0.5rem;
+  background: #ecf0f1;
+  color: #2c3e50;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.805rem;
+  font-weight: 760;
+  text-transform: capitalize;
+  -webkit-box-shadow: 0.4rem 0.3rem 0.4rem 0 rgba(44, 62, 80, 0.4), 0.2rem 0.4rem 0.4rem rgba(236, 240, 241, 0.3), 0 0.2rem 0.4rem 0.3rem rgba(44, 62, 80, 0.4), 0 0.2rem 0.14rem 0.1rem rgba(44, 62, 80, 0.3);
+          box-shadow: 0.4rem 0.3rem 0.4rem 0 rgba(44, 62, 80, 0.4), 0.2rem 0.4rem 0.4rem rgba(236, 240, 241, 0.3), 0 0.2rem 0.4rem 0.3rem rgba(44, 62, 80, 0.4), 0 0.2rem 0.14rem 0.1rem rgba(44, 62, 80, 0.3);
+  cursor: pointer;
+}
+
+.container .btn:active {
+  -webkit-transform: scale(0.97);
+          transform: scale(0.97);
+}
+
+.container .btn:focus {
+  -webkit-box-shadow: 0 0 0 0.3rem rgba(44, 62, 80, 0.4) inset, 0 0 0 0.3rem rgba(44, 62, 80, 0.3) inset;
+          box-shadow: 0 0 0 0.3rem rgba(44, 62, 80, 0.4) inset, 0 0 0 0.3rem rgba(44, 62, 80, 0.3) inset;
+}
+
+.container .btn:focus:not(:focus-visible) {
+  outline: none;
 }
 /*# sourceMappingURL=styles.css.map */
