--- a/day55-HexColorPicker/css/styles.css
+++ b/day55-HexColorPicker/css/styles.css
@@ -43,9 +43,12 @@ body {
 
 .container .output--container .output {
   display: inline-block;
+  padding: 1.5rem;
   font-size: 3.15789rem;
   font-weight: 760;
+  background: rgba(44, 62, 80, 0.5);
   color: #ecf0f1;
+  border-radius: 0.5rem;
 }
 
 .container .btn {
